added head distance and training and transfer pages

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
 </head>
 
 <body>
-    <!-- <div id="console"></div> -->
+    <div id="console"></div>
     <video hidden id="video" playsinline muted autoplay style="-webkit-transform: scaleX(-1);transform: scaleX(-1);width: 256;height: 256;"></video>
-<!--     <button id="class-a">Add A</button>
+ <button id="class-a">Add A</button>
     <button id="class-b">Add B</button>
-    <button id="class-c">Add C</button> -->
-<!--     <button id="train">Train</button>
-    <button id="predict">Predict</button> -->
-<!--     <canvas id="thumb-face", width=128, height=128></canvas>
+    <button id="class-c">Add C</button>
+<button id="train">Train</button>
+    <button id="predict">Predict</button>
+ <canvas id="thumb-face", width=128, height=128></canvas>
     <canvas id="thumb-left-eye", width=64, height=64></canvas>
-    <canvas id="thumb-right-eye", width=64, height=64></canvas> -->
+    <canvas id="thumb-right-eye", width=64, height=64></canvas>
 </body>
 
 </html>
